--- a/Backup.ipynb
+++ b/Backup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +248,23 @@
     "create_comments_db(sql_comments_path)\n",
     "patch_insert_comments(sql_path,sql_comments_path)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save list post to json\n",
+    "dir = \"./acticles\"\n",
+    "list_post = os.listdir(dir)\n",
+    "# save list post name to json same folder, just get file end with .md\n",
+    "list_post = [i for i in list_post if i.endswith('.md')]\n",
+    "# save to same folder with post.json \n",
+    "with open(f\"{dir}/post.json\", \"w\") as f:\n",
+    "    json.dump(list_post, f)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -266,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
