fix filter datetime

--- a/Backup.ipynb
+++ b/Backup.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +264,39 @@
     "with open(f\"{dir}/post.json\", \"w\") as f:\n",
     "    json.dump(list_post, f)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## read all content in markdown file, if text in --- --- delete it and save \n",
+    "import os\n",
+    "import re\n",
+    "import json\n",
+    "def read_markdown_file(file_path):\n",
+    "    with open(file_path, 'r',encoding='utf-8') as f:\n",
+    "        content = f.read()\n",
+    "    return content\n",
+    "def save_markdown_file(file_path,content):\n",
+    "    with open(file_path, 'w',encoding='utf-8') as f:\n",
+    "        f.write(content)\n",
+    "def remove_front_matter(content):\n",
+    "    # Remove front matter (text between '---' delimiters)\n",
+    "    content = re.sub(r'^---[\\s\\S]*?---\\n', '', content)\n",
+    "    return content\n",
+    "def remove_front_matter_in_folder(folder_path):\n",
+    "    list_post = os.listdir(folder_path)\n",
+    "    list_post = [i for i in list_post if i.endswith('.md')]\n",
+    "    for post in list_post:\n",
+    "        post_path = os.path.join(folder_path, post)\n",
+    "        content = read_markdown_file(post_path)\n",
+    "        content = remove_front_matter(content)\n",
+    "        save_markdown_file(post_path, content)\n",
+    "# remove front matter in folder\n",
+    "remove_front_matter_in_folder('acticles')\n"
    ]
   }
  ],
