--- a/Backup.ipynb
+++ b/Backup.ipynb
@@ -305,34 +305,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# change title case Markdown file follow with pattern yyyy-mm-dd-title.md\n",
-    "import os\n",
-    "import re\n",
-    "def change_title_case(file_path):\n",
-    "    # Extract the date and title from the file name\n",
-    "    file_name = os.path.basename(file_path)\n",
-    "    match = re.match(r'^(\\d{4}-\\d{2}-\\d{2})-(.*)\\.md$', file_name)\n",
-    "    if match:\n",
-    "        date = match.group(1)\n",
-    "        title = match.group(2)\n",
-    "        # Capitalize the first letter of each word in the title\n",
-    "        title = title.title()\n",
-    "        # Construct the new file name\n",
-    "        new_file_name = f\"{date}-{title}.md\"\n",
-    "        new_file_path = os.path.join(os.path.dirname(file_path), new_file_name)\n",
-    "        # Rename the file\n",
-    "        os.rename(file_path, new_file_path)\n",
-    "        print(f\"Renamed {file_name} to {new_file_name}\")\n",
-    "    else:\n",
-    "        print(f\"Could not match file name pattern: {file_name}\")\n",
-    "def change_title_case_in_folder(folder_path):\n",
-    "    list_post = os.listdir(folder_path)\n",
-    "    list_post = [i for i in list_post if i.endswith('.md')]\n",
-    "    for post in list_post:\n",
-    "        post_path = os.path.join(folder_path, post)\n",
-    "        change_title_case(post_path)\n",
-    "# change title case in folder\n",
-    "change_title_case_in_folder('acticles')\n",
+    "# # change title case Markdown file follow with pattern yyyy-mm-dd-title.md\n",
+    "# import os\n",
+    "# import re\n",
+    "# def change_title_case(file_path):\n",
+    "#     # Extract the date and title from the file name\n",
+    "#     file_name = os.path.basename(file_path)\n",
+    "#     match = re.match(r'^(\\d{4}-\\d{2}-\\d{2})-(.*)\\.md$', file_name)\n",
+    "#     if match:\n",
+    "#         date = match.group(1)\n",
+    "#         title = match.group(2)\n",
+    "#         # Capitalize the first letter of each word in the title\n",
+    "#         title = title.title()\n",
+    "#         # Construct the new file name\n",
+    "#         new_file_name = f\"{date}-{title}.md\"\n",
+    "#         new_file_path = os.path.join(os.path.dirname(file_path), new_file_name)\n",
+    "#         # Rename the file\n",
+    "#         os.rename(file_path, new_file_path)\n",
+    "#         print(f\"Renamed {file_name} to {new_file_name}\")\n",
+    "#     else:\n",
+    "#         print(f\"Could not match file name pattern: {file_name}\")\n",
+    "# def change_title_case_in_folder(folder_path):\n",
+    "#     list_post = os.listdir(folder_path)\n",
+    "#     list_post = [i for i in list_post if i.endswith('.md')]\n",
+    "#     for post in list_post:\n",
+    "#         post_path = os.path.join(folder_path, post)\n",
+    "#         change_title_case(post_path)\n",
+    "# # change title case in folder\n",
+    "# change_title_case_in_folder('acticles')\n",
     "\n",
     "    "
    ]
@@ -493,53 +493,53 @@
     }
    ],
    "source": [
-    "# read title format yyyy-mm-dd-title.md, if title have - replace -  with space and save\n",
-    "import os\n",
-    "import re\n",
-    "def read_markdown_file(file_path):\n",
-    "    with open(file_path, 'r',encoding='utf-8') as f:\n",
-    "        content = f.read()\n",
-    "    return\n",
-    "def save_markdown_file(file_path,content):\n",
-    "    with open(file_path, 'w',encoding='utf-8') as f:\n",
-    "        f.write(content)\n",
-    "def remove_front_matter(content):\n",
-    "    # Remove front matter (text between '---' delimiters)\n",
-    "    content = re.sub(r'^---[\\s\\S]*?---\\n', '', content)\n",
-    "    return\n",
-    "def change_title_case(file_path):\n",
-    "    # Extract the date and title from the file name\n",
-    "    file_name = os.path.basename(file_path)\n",
-    "    match = re.match(r'^(\\d{4}-\\d{2}-\\d{2})-(.*)\\.md$', file_name)\n",
-    "    if match:\n",
-    "        date = match.group(1)\n",
-    "        title = match.group(2)\n",
-    "        # Capitalize the first letter of each word in the title\n",
-    "        title = title.replace('-', ' ')\n",
-    "        # Construct the new file name\n",
-    "        new_file_name = f\"{date}-{title}.md\"\n",
-    "        new_file_path = os.path.join(os.path.dirname(file_path), new_file_name)\n",
-    "        # Rename the file\n",
-    "        os.rename(file_path, new_file_path)\n",
-    "        print(f\"Renamed {file_name} to {new_file_name}\")\n",
-    "    else:\n",
-    "        print(f\"Could not match file name pattern: {file_name}\")\n",
-    "def change_title_case_in_folder(folder_path):\n",
-    "    list_post = os.listdir(folder_path)\n",
-    "    list_post = [i for i in list_post if i.endswith('.md')]\n",
-    "    for post in list_post:\n",
-    "        post_path = os.path.join(folder_path, post)\n",
-    "        change_title_case(post_path)\n",
-    "def remove_front_matter_in_folder(folder_path):\n",
-    "    list_post = os.listdir(folder_path)\n",
-    "    list_post = [i for i in list_post if i.endswith('.md')]\n",
-    "    for post in list_post:\n",
-    "        post_path = os.path.join(folder_path, post)\n",
-    "        content = read_markdown_file(post_path)\n",
-    "        content = remove_front_matter(content)\n",
-    "        save_markdown_file(post_path, content)\n",
-    "# change title case in folder\n",
-    "change_title_case_in_folder('acticles')\n"
+    "# # read title format yyyy-mm-dd-title.md, if title have - replace -  with space and save\n",
+    "# import os\n",
+    "# import re\n",
+    "# def read_markdown_file(file_path):\n",
+    "#     with open(file_path, 'r',encoding='utf-8') as f:\n",
+    "#         content = f.read()\n",
+    "#     return\n",
+    "# def save_markdown_file(file_path,content):\n",
+    "#     with open(file_path, 'w',encoding='utf-8') as f:\n",
+    "#         f.write(content)\n",
+    "# def remove_front_matter(content):\n",
+    "#     # Remove front matter (text between '---' delimiters)\n",
+    "#     content = re.sub(r'^---[\\s\\S]*?---\\n', '', content)\n",
+    "#     return\n",
+    "# def change_title_case(file_path):\n",
+    "#     # Extract the date and title from the file name\n",
+    "#     file_name = os.path.basename(file_path)\n",
+    "#     match = re.match(r'^(\\d{4}-\\d{2}-\\d{2})-(.*)\\.md$', file_name)\n",
+    "#     if match:\n",
+    "#         date = match.group(1)\n",
+    "#         title = match.group(2)\n",
+    "#         # Capitalize the first letter of each word in the title\n",
+    "#         title = title.replace('-', ' ')\n",
+    "#         # Construct the new file name\n",
+    "#         new_file_name = f\"{date}-{title}.md\"\n",
+    "#         new_file_path = os.path.join(os.path.dirname(file_path), new_file_name)\n",
+    "#         # Rename the file\n",
+    "#         os.rename(file_path, new_file_path)\n",
+    "#         print(f\"Renamed {file_name} to {new_file_name}\")\n",
+    "#     else:\n",
+    "#         print(f\"Could not match file name pattern: {file_name}\")\n",
+    "# def change_title_case_in_folder(folder_path):\n",
+    "#     list_post = os.listdir(folder_path)\n",
+    "#     list_post = [i for i in list_post if i.endswith('.md')]\n",
+    "#     for post in list_post:\n",
+    "#         post_path = os.path.join(folder_path, post)\n",
+    "#         change_title_case(post_path)\n",
+    "# def remove_front_matter_in_folder(folder_path):\n",
+    "#     list_post = os.listdir(folder_path)\n",
+    "#     list_post = [i for i in list_post if i.endswith('.md')]\n",
+    "#     for post in list_post:\n",
+    "#         post_path = os.path.join(folder_path, post)\n",
+    "#         content = read_markdown_file(post_path)\n",
+    "#         content = remove_front_matter(content)\n",
+    "#         save_markdown_file(post_path, content)\n",
+    "# # change title case in folder\n",
+    "# change_title_case_in_folder('acticles')\n"
    ]
   }
  ],
