--- a/Backup.ipynb
+++ b/Backup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as Backup Posts Dev.to to SQLite.md\n"
+      "File saved as Backup Posts Dev.to to SQLite.md\n",
+      "File saved as Use OSS Bucket SDK .NET Autodesk Platform Services (APS).md\n",
+      "File saved as Use Await Async Revit API.md\n"
      ]
     }
    ],
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,40 +270,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## read all content in markdown file, if text in --- --- delete it and save \n",
-    "import os\n",
-    "import re\n",
-    "import json\n",
-    "def read_markdown_file(file_path):\n",
-    "    with open(file_path, 'r',encoding='utf-8') as f:\n",
-    "        content = f.read()\n",
-    "    return content\n",
-    "def save_markdown_file(file_path,content):\n",
-    "    with open(file_path, 'w',encoding='utf-8') as f:\n",
-    "        f.write(content)\n",
-    "def remove_front_matter(content):\n",
-    "    # Remove front matter (text between '---' delimiters)\n",
-    "    content = re.sub(r'^---[\\s\\S]*?---\\n', '', content)\n",
-    "    return content\n",
-    "def remove_front_matter_in_folder(folder_path):\n",
-    "    list_post = os.listdir(folder_path)\n",
-    "    list_post = [i for i in list_post if i.endswith('.md')]\n",
-    "    for post in list_post:\n",
-    "        post_path = os.path.join(folder_path, post)\n",
-    "        content = read_markdown_file(post_path)\n",
-    "        content = remove_front_matter(content)\n",
-    "        save_markdown_file(post_path, content)\n",
-    "# remove front matter in folder\n",
-    "remove_front_matter_in_folder('acticles')\n"
+    "# ## read all content in markdown file, if text in --- --- delete it and save \n",
+    "# import os\n",
+    "# import re\n",
+    "# import json\n",
+    "# def read_markdown_file(file_path):\n",
+    "#     with open(file_path, 'r',encoding='utf-8') as f:\n",
+    "#         content = f.read()\n",
+    "#     return content\n",
+    "# def save_markdown_file(file_path,content):\n",
+    "#     with open(file_path, 'w',encoding='utf-8') as f:\n",
+    "#         f.write(content)\n",
+    "# def remove_front_matter(content):\n",
+    "#     # Remove front matter (text between '---' delimiters)\n",
+    "#     content = re.sub(r'^---[\\s\\S]*?---\\n', '', content)\n",
+    "#     return content\n",
+    "# def remove_front_matter_in_folder(folder_path):\n",
+    "#     list_post = os.listdir(folder_path)\n",
+    "#     list_post = [i for i in list_post if i.endswith('.md')]\n",
+    "#     for post in list_post:\n",
+    "#         post_path = os.path.join(folder_path, post)\n",
+    "#         content = read_markdown_file(post_path)\n",
+    "#         content = remove_front_matter(content)\n",
+    "#         save_markdown_file(post_path, content)\n",
+    "# # remove front matter in folder\n",
+    "# remove_front_matter_in_folder('acticles')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,159 +341,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Renamed 2024-06-12-Meeting Not Useful.md to 2024-06-12-Meeting Not Useful.md\n",
-      "Renamed 2019-10-03-Wrapping Unwrapping And Converting.md to 2019-10-03-Wrapping Unwrapping And Converting.md\n",
-      "Renamed 2022-07-09-Autodesk Tandem Beta Now.md to 2022-07-09-Autodesk Tandem Beta Now.md\n",
-      "Renamed 2023-12-28-Derivative Urn Forge.md to 2023-12-28-Derivative Urn Forge.md\n",
-      "Renamed 2024-05-07-Get 3Leg Aps With Csharp.md to 2024-05-07-Get 3Leg Aps With Csharp.md\n",
-      "Renamed 2020-11-20-Top Error When Start With Unity.md to 2020-11-20-Top Error When Start With Unity.md\n",
-      "Renamed 2023-04-24-Transform Shared Cooridnatesystem To Origin.md to 2023-04-24-Transform Shared Cooridnatesystem To Origin.md\n",
-      "Renamed 2024-05-18-My Mistake In Startup.md to 2024-05-18-My Mistake In Startup.md\n",
-      "Renamed 2021-02-01-Revittestfuntion.md to 2021-02-01-Revittestfuntion.md\n",
-      "Renamed 2023-10-13-Let Make Example Transformer.md to 2023-10-13-Let Make Example Transformer.md\n",
-      "Renamed 2020-06-27-Fsharp In Revitapi.md to 2020-06-27-Fsharp In Revitapi.md\n",
-      "Renamed 2022-10-16-Top Trends Will Change In The Aec Industry.md to 2022-10-16-Top Trends Will Change In The Aec Industry.md\n",
-      "Renamed 2023-12-12-Tech Highlight 12 2023.md to 2023-12-12-Tech Highlight 12 2023.md\n",
-      "Renamed 2020-06-11-Dialux Place Light From File Export.md to 2020-06-11-Dialux Place Light From File Export.md\n",
-      "Renamed 2023-03-03-Openmep Package Published.md to 2023-03-03-Openmep Package Published.md\n",
-      "Renamed 2024-04-13-How Export Revit Data Acc Without Api.md to 2024-04-13-How Export Revit Data Acc Without Api.md\n",
-      "Renamed 2022-11-21-Point Is In Room Dynamo Revit Speckle.md to 2022-11-21-Point Is In Room Dynamo Revit Speckle.md\n",
-      "Renamed 2020-11-19-Geometry Closet And Geometry Working Range.md to 2020-11-19-Geometry Closet And Geometry Working Range.md\n",
-      "Renamed 2023-10-30-Let Back To Forge.md to 2023-10-30-Let Back To Forge.md\n",
-      "Renamed 2022-06-20-Top Shortcut Help You Pro Rider.md to 2022-06-20-Top Shortcut Help You Pro Rider.md\n",
-      "Renamed 2024-02-14-Why Sometimes I Hate Scrum.md to 2024-02-14-Why Sometimes I Hate Scrum.md\n",
-      "Renamed 2023-10-17-Let Make Ifcjs Simple Rollup.md to 2023-10-17-Let Make Ifcjs Simple Rollup.md\n",
-      "Renamed 2022-04-05-Cad Python Shell.md to 2022-04-05-Cad Python Shell.md\n",
-      "Renamed 2022-04-14-Get Path Linked Bim360 Dynamo Revit.md to 2022-04-14-Get Path Linked Bim360 Dynamo Revit.md\n",
-      "Renamed 2023-01-16-How To Make Face Recognition.md to 2023-01-16-How To Make Face Recognition.md\n",
-      "Renamed 2025-01-18-Use Oss Bucket Sdk .Net Autodesk Platform Services (Aps).md to 2025-01-18-Use Oss Bucket Sdk .Net Autodesk Platform Services (Aps).md\n",
-      "Renamed 2022-10-23-Singapore Hochiminh Phuquoc Island.md to 2022-10-23-Singapore Hochiminh Phuquoc Island.md\n",
-      "Renamed 2023-10-15-Dunning Kruger Efect.md to 2023-10-15-Dunning Kruger Efect.md\n",
-      "Renamed 2024-11-13-Revit Meows Released.md to 2024-11-13-Revit Meows Released.md\n",
-      "Renamed 2024-02-26-Connect Revit With Jupyternotebook.md to 2024-02-26-Connect Revit With Jupyternotebook.md\n",
-      "Renamed 2023-04-12-Autocad Ucs Wcs.md to 2023-04-12-Autocad Ucs Wcs.md\n",
-      "Renamed 2022-08-24-How To Use Revitlookupwpf In Dynamo Revit.md to 2022-08-24-How To Use Revitlookupwpf In Dynamo Revit.md\n",
-      "Renamed 2024-09-04-Adsk Refresh 3Leg Token.md to 2024-09-04-Adsk Refresh 3Leg Token.md\n",
-      "Renamed 2022-04-20-Navis Addin Manager.md to 2022-04-20-Navis Addin Manager.md\n",
-      "Renamed 2021-06-03-Recursive To Get Pipe Branch.md to 2021-06-03-Recursive To Get Pipe Branch.md\n",
-      "Renamed 2024-07-08-Criminal Psychology.md to 2024-07-08-Criminal Psychology.md\n",
-      "Renamed 2024-05-02-Use Com Api Autocad Netcore.md to 2024-05-02-Use Com Api Autocad Netcore.md\n",
-      "Renamed 2024-06-01-Run Revit Unit Test.md to 2024-06-01-Run Revit Unit Test.md\n",
-      "Renamed 2022-04-28-Cad Civil3D Addin Manager.md to 2022-04-28-Cad Civil3D Addin Manager.md\n",
-      "Renamed 2021-07-01-Bim Job Market.md to 2021-07-01-Bim Job Market.md\n",
-      "Renamed 2023-06-27-Extract Cad Block Dynamic.md to 2023-06-27-Extract Cad Block Dynamic.md\n",
-      "Renamed 2025-01-19-Backup Posts Dev.To To Sqlite.md to 2025-01-19-Backup Posts Dev.To To Sqlite.md\n",
-      "Renamed 2022-10-26-Autodesk Expert Elite.md to 2022-10-26-Autodesk Expert Elite.md\n",
-      "Renamed 2023-09-26-Tech Highlight 09 2023.md to 2023-09-26-Tech Highlight 09 2023.md\n",
-      "Renamed 2025-01-18-Use Await Async Revit Api.md to 2025-01-18-Use Await Async Revit Api.md\n",
-      "Renamed 2023-05-11-Solving Load Assembly In Aec.md to 2023-05-11-Solving Load Assembly In Aec.md\n",
-      "Renamed 2021-06-29-Introduce Compas.md to 2021-06-29-Introduce Compas.md\n",
-      "Renamed 2023-12-17-Let Back To Forge Part2.md to 2023-12-17-Let Back To Forge Part2.md\n",
-      "Renamed 2022-11-03-Forgeapi Connect Speckle.md to 2022-11-03-Forgeapi Connect Speckle.md\n",
-      "Renamed 2023-10-14-How To Define Good Leader.md to 2023-10-14-How To Define Good Leader.md\n",
-      "Renamed 2024-05-09-Get 3Leg Aps With Google Colab.md to 2024-05-09-Get 3Leg Aps With Google Colab.md\n",
-      "Renamed 2020-10-08-Check Intersect Curve Detailline Line Grid.md to 2020-10-08-Check Intersect Curve Detailline Line Grid.md\n",
-      "Renamed 2023-03-13-Easy To Understand Angleaboutaxis.md to 2023-03-13-Easy To Understand Angleaboutaxis.md\n",
-      "Renamed 2022-07-18-Move From Vietnam To Singapore Work.md to 2022-07-18-Move From Vietnam To Singapore Work.md\n",
-      "Renamed 2024-04-02-Aps Acc Urn.md to 2024-04-02-Aps Acc Urn.md\n",
-      "Renamed 2024-03-15-How Much Is Enough.md to 2024-03-15-How Much Is Enough.md\n",
-      "Renamed 2023-10-07-Google Ai Palm2.md to 2023-10-07-Google Ai Palm2.md\n",
-      "Renamed 2022-03-29-Start With Notion Part2.md to 2022-03-29-Start With Notion Part2.md\n",
-      "Renamed 2022-10-18-Ifc Open Shell Document Now.md to 2022-10-18-Ifc Open Shell Document Now.md\n",
-      "Renamed 2022-11-24-Resolve Autodesk Desktop Connector.md to 2022-11-24-Resolve Autodesk Desktop Connector.md\n",
-      "Renamed 2020-10-21-Top Open Source In Aec.md to 2020-10-21-Top Open Source In Aec.md\n",
-      "Renamed 2022-10-29-Maintain Dynamo Zero Touch Package Net6.md to 2022-10-29-Maintain Dynamo Zero Touch Package Net6.md\n",
-      "Renamed 2022-12-11-Chatgpt Openai Dynamo.md to 2022-12-11-Chatgpt Openai Dynamo.md\n",
-      "Renamed 2024-05-22-Maintain Dynamo Is Headache.md to 2024-05-22-Maintain Dynamo Is Headache.md\n",
-      "Renamed 2022-04-20-Revit Addin Manager.md to 2022-04-20-Revit Addin Manager.md\n",
-      "Renamed 2024-02-19-Increase Your Learning Curve Copy.md to 2024-02-19-Increase Your Learning Curve Copy.md\n",
-      "Renamed 2024-06-12-Aps Cli Ai.md to 2024-06-12-Aps Cli Ai.md\n",
-      "Renamed 2024-07-26-Give Up Problem Resolve.md to 2024-07-26-Give Up Problem Resolve.md\n",
-      "Renamed 2021-06-26-Can A Civil Engineer Become Developer.md to 2021-06-26-Can A Civil Engineer Become Developer.md\n",
-      "Renamed 2022-09-18-Int32 Int64 Elementid Revitapi.md to 2022-09-18-Int32 Int64 Elementid Revitapi.md\n",
-      "Renamed 2024-04-19-Reload Ribbon Revit.md to 2024-04-19-Reload Ribbon Revit.md\n",
-      "Renamed 2022-04-01-Nuget Package Autodesk Developer.md to 2022-04-01-Nuget Package Autodesk Developer.md\n",
-      "Renamed 2024-09-25-Revit Extractor.md to 2024-09-25-Revit Extractor.md\n",
-      "Renamed 2020-11-27-Create Sheet In Revitapi.md to 2020-11-27-Create Sheet In Revitapi.md\n",
-      "Renamed 2023-12-18-Bundle Version Design Automation.md to 2023-12-18-Bundle Version Design Automation.md\n",
-      "Renamed 2019-02-19-Start With Revitapi.md to 2019-02-19-Start With Revitapi.md\n",
-      "Renamed 2022-06-19-Find Shortest Path.md to 2022-06-19-Find Shortest Path.md\n",
-      "Renamed 2023-12-16-Github Action Test Designautomation.md to 2023-12-16-Github Action Test Designautomation.md\n",
-      "Renamed 2023-10-08-Tech Highlight 10 2023.md to 2023-10-08-Tech Highlight 10 2023.md\n",
-      "Renamed 2024-04-11-How Ai Help Ominiclass.md to 2024-04-11-How Ai Help Ominiclass.md\n",
-      "Renamed 2022-07-04-Bring Revitpythonshell Awesome Again.md to 2022-07-04-Bring Revitpythonshell Awesome Again.md\n",
-      "Renamed 2019-12-02-Autocomplete Stubs For Common Ironpython Net Libraries.md to 2019-12-02-Autocomplete Stubs For Common Ironpython Net Libraries.md\n",
-      "Renamed 2024-08-27-Adsk Aec Model Api.md to 2024-08-27-Adsk Aec Model Api.md\n",
-      "Renamed 2024-09-16-Bim Is Adop Slow.md to 2024-09-16-Bim Is Adop Slow.md\n",
-      "Renamed 2019-02-14-Start With Pyrevit.md to 2019-02-14-Start With Pyrevit.md\n",
-      "Renamed 2023-03-25-How To Learn Ifc.md to 2023-03-25-How To Learn Ifc.md\n",
-      "Renamed 2020-06-18-Add Share Parameter To System Family.md to 2020-06-18-Add Share Parameter To System Family.md\n",
-      "Renamed 2019-02-15-Start With Revitpythonshell.md to 2019-02-15-Start With Revitpythonshell.md\n",
-      "Renamed 2024-10-17-How Web Socket Da Work.md to 2024-10-17-How Web Socket Da Work.md\n",
-      "Renamed 2022-03-30-Start With Notion Api Part3.md to 2022-03-30-Start With Notion Api Part3.md\n",
-      "Renamed 2020-06-04-Get Top Face From Geometry.md to 2020-06-04-Get Top Face From Geometry.md\n",
-      "Renamed 2024-03-25-Tech Highlight.md to 2024-03-25-Tech Highlight.md\n",
-      "Renamed 2022-06-14-The World Is Facing A Digital Skills Shortage Disaster.md to 2022-06-14-The World Is Facing A Digital Skills Shortage Disaster.md\n",
-      "Renamed 2024-04-24-Burnout Software In Bim.md to 2024-04-24-Burnout Software In Bim.md\n",
-      "Renamed 2025-01-18-Forge Viewer Python Library Notebook.md to 2025-01-18-Forge Viewer Python Library Notebook.md\n",
-      "Renamed 2024-02-26-Autodesk Platform Services Toolkit Published.md to 2024-02-26-Autodesk Platform Services Toolkit Published.md\n",
-      "Renamed 2023-01-18-Hackathon Control Clash Version Speckle Navisworks.md to 2023-01-18-Hackathon Control Clash Version Speckle Navisworks.md\n",
-      "Renamed 2021-03-06-Revit Version Checker.md to 2021-03-06-Revit Version Checker.md\n",
-      "Renamed 2024-02-25-Export Ifc Excel Csv.md to 2024-02-25-Export Ifc Excel Csv.md\n",
-      "Renamed 2024-03-26-Digital Transformation.md to 2024-03-26-Digital Transformation.md\n",
-      "Renamed 2022-05-15-Open Or Close Open Source.md to 2022-05-15-Open Or Close Open Source.md\n",
-      "Renamed 2023-10-16-Let Make Ifcjs Simple Webpack.md to 2023-10-16-Let Make Ifcjs Simple Webpack.md\n",
-      "Renamed 2022-06-21-Use Data Science To See What Is New Revitapi 2023.md to 2022-06-21-Use Data Science To See What Is New Revitapi 2023.md\n",
-      "Renamed 2022-03-28-Start With Notion.md to 2022-03-28-Start With Notion.md\n",
-      "Renamed 2020-08-20-Csharp In Python In Dynamo.md to 2020-08-20-Csharp In Python In Dynamo.md\n",
-      "Renamed 2022-12-18-Mac M1 Silicon Aec.md to 2022-12-18-Mac M1 Silicon Aec.md\n",
-      "Renamed 2024-05-15-Why Use Firefox.md to 2024-05-15-Why Use Firefox.md\n",
-      "Renamed 2024-02-15-When Software Developement Happy Copy.md to 2024-02-15-When Software Developement Happy Copy.md\n",
-      "Renamed 2020-09-19-Project Point To A Plane Dynamo Revitapi.md to 2020-09-19-Project Point To A Plane Dynamo Revitapi.md\n",
-      "Renamed 2020-06-20-Trim With Edge Loops Requires All Curves To Touch Surface.md to 2020-06-20-Trim With Edge Loops Requires All Curves To Touch Surface.md\n",
-      "Renamed 2022-09-20-Use Speckle Visualization Room Data.md to 2022-09-20-Use Speckle Visualization Room Data.md\n",
-      "Renamed 2024-05-01-Get 3Leg Aps With Python.md to 2024-05-01-Get 3Leg Aps With Python.md\n",
-      "Renamed 2022-09-24-Scraper Image From Bimobject.md to 2022-09-24-Scraper Image From Bimobject.md\n",
-      "Renamed 2020-08-11-Flatten In Dynamo.md to 2020-08-11-Flatten In Dynamo.md\n",
-      "Renamed 2023-11-11-Tech Highlight 11 2023.md to 2023-11-11-Tech Highlight 11 2023.md\n",
-      "Renamed 2020-06-10-Dynamo Python 3 Support Issue Thread.md to 2020-06-10-Dynamo Python 3 Support Issue Thread.md\n",
-      "Renamed 2022-12-13-Autodesk Forge Aps Bim360.md to 2022-12-13-Autodesk Forge Aps Bim360.md\n",
-      "Renamed 2021-07-14-Dynamo Key Learning.md to 2021-07-14-Dynamo Key Learning.md\n",
-      "Renamed 2023-10-29-Deploy Rest Api Free.md to 2023-10-29-Deploy Rest Api Free.md\n",
-      "Renamed 2020-09-13-Get Outline Textnote Dynamo Revit.md to 2020-09-13-Get Outline Textnote Dynamo Revit.md\n",
-      "Renamed 2022-10-09-Awesome Dynamo Book.md to 2022-10-09-Awesome Dynamo Book.md\n",
-      "Renamed 2024-10-26-Autodesk Au 2024.md to 2024-10-26-Autodesk Au 2024.md\n",
-      "Renamed 2023-09-01-Data Platform Connection.md to 2023-09-01-Data Platform Connection.md\n",
-      "Renamed 2022-10-13-Top Problem When Engineer Learn Programing Language.md to 2022-10-13-Top Problem When Engineer Learn Programing Language.md\n",
-      "Renamed 2020-06-28-Number In String.md to 2020-06-28-Number In String.md\n",
-      "Renamed 2022-07-07-How To Start With Specklebim.md to 2022-07-07-How To Start With Specklebim.md\n",
-      "Renamed 2022-12-21-Try Install Tensorflow Mac M1.md to 2022-12-21-Try Install Tensorflow Mac M1.md\n",
-      "Renamed 2022-05-06-Get Properties From Clashtest Navisworks.md to 2022-05-06-Get Properties From Clashtest Navisworks.md\n",
-      "Renamed 2021-04-07-Why We Learn Matrix Math.md to 2021-04-07-Why We Learn Matrix Math.md\n",
-      "Renamed 2020-07-26-Multi Theard And Externaleventhander Revitapi.md to 2020-07-26-Multi Theard And Externaleventhander Revitapi.md\n",
-      "Renamed 2022-11-07-Lidar Pointcloud Speckle.md to 2022-11-07-Lidar Pointcloud Speckle.md\n",
-      "Renamed 2020-08-27-Big Update For Package Dynamep.md to 2020-08-27-Big Update For Package Dynamep.md\n",
-      "Renamed 2024-06-08-When Automation Make Sense.md to 2024-06-08-When Automation Make Sense.md\n",
-      "Renamed 2023-02-08-Relationship Linearregesstion With Pipe Slope.md to 2023-02-08-Relationship Linearregesstion With Pipe Slope.md\n",
-      "Renamed 2021-06-15-Insert Value Index String.md to 2021-06-15-Insert Value Index String.md\n",
-      "Renamed 2023-10-05-Move To New Blog.md to 2023-10-05-Move To New Blog.md\n",
-      "Renamed 2023-04-01-Differences Dijkstrasalgorithm Fordalgorithm.md to 2023-04-01-Differences Dijkstrasalgorithm Fordalgorithm.md\n",
-      "Renamed 2020-09-09-Detail Curve Must Be In Plane.md to 2020-09-09-Detail Curve Must Be In Plane.md\n",
-      "Renamed 2023-08-19-Hungarian Maximum Matching Algorithm.md to 2023-08-19-Hungarian Maximum Matching Algorithm.md\n",
-      "Renamed 2024-02-05-Life Without Computer.md to 2024-02-05-Life Without Computer.md\n",
-      "Renamed 2024-04-08-Hack Omania 2024.md to 2024-04-08-Hack Omania 2024.md\n",
-      "Renamed 2020-08-26-Export And Import Schedule Revit.md to 2020-08-26-Export And Import Schedule Revit.md\n",
-      "Renamed 2023-01-02-Welcome 2023.md to 2023-01-02-Welcome 2023.md\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # read title format yyyy-mm-dd-title.md, if title have - replace -  with space and save\n",
     "# import os\n",
